fix sona